usercontroller, dal, etc.

--- a/Capstone.Web/Web.config
+++ b/Capstone.Web/Web.config
@@ -4,10 +4,12 @@
   http://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+
   <configSections>
     
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -46,4 +48,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="Capstone" connectionString="Data Source=DESKTOP-BQON135\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True;MultipleActiveResultSets=True" />
+  </connectionStrings>
 </configuration>
