--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -139,7 +139,10 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Crypto\HashProvider.cs" />
+    <Compile Include="DAL\ITournamentDAL.cs" />
+    <Compile Include="DAL\IUserDAL.cs" />
     <Compile Include="DAL\TournamentSqlDal.cs" />
+    <Compile Include="DAL\UserSqlDal.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
