--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -162,7 +162,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\CreateTournament.cshtml" />
+    <Content Include="Views\Tournament\CreateTournamentForm.cshtml" />
     <Content Include="Views\User\Register.cshtml" />
     <Content Include="Views\Tournament\Detail.cshtml" />
     <None Include="Web.Debug.config">
