commiting changes before merge and switching to workspace2 branch

--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -147,10 +147,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Match.cs" />
+    <Compile Include="Models\Data\Tournament.cs" />
+    <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\Data\Match.cs" />
     <Compile Include="Models\NewUserViewModel.cs" />
-    <Compile Include="Models\Tournament.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Models\NewTournamentViewModel.cs" />
+    <Compile Include="Models\Data\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionKeys.cs" />
   </ItemGroup>
@@ -163,8 +165,9 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\CreateTournament.cshtml" />
-    <Content Include="Views\User\Register.cshtml" />
+    <Content Include="Views\Users\Register.cshtml" />
     <Content Include="Views\Tournament\Detail.cshtml" />
+    <Content Include="Views\Users\Login.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
