--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -147,12 +147,12 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Data\Tournament.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
-    <Compile Include="Models\Data\Match.cs" />
+    <Compile Include="Models\Match.cs" />
     <Compile Include="Models\NewUserViewModel.cs" />
     <Compile Include="Models\NewTournamentViewModel.cs" />
-    <Compile Include="Models\Data\User.cs" />
+    <Compile Include="Models\Tournament.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionKeys.cs" />
   </ItemGroup>
