--- a/Capstone.Web/Web.config
+++ b/Capstone.Web/Web.config
@@ -49,6 +49,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Capstone" connectionString="Data Source=DESKTOP-BQON135\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="Capstone" connectionString="Data Source=DESKTOP-CTIJ0GB\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True" />
   </connectionStrings>
 </configuration>
