search and create new tournament actions

--- a/Capstone.Web/Capstone.Web.csproj
+++ b/Capstone.Web/Capstone.Web.csproj
@@ -173,6 +173,9 @@
     <Content Include="Views\Tournament\Detail.cshtml" />
     <Content Include="Views\Home\Brackets.cshtml" />
     <Content Include="Views\Users\Login.cshtml" />
+    <Content Include="Views\Tournament\Browse.cshtml" />
+    <Content Include="Views\Tournament\Search.cshtml" />
+    <Content Include="Views\Tournament\SearchResult.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
