--- a/Capstone.Web/Web.config
+++ b/Capstone.Web/Web.config
@@ -6,7 +6,6 @@
 <configuration>
 
   <configSections>
-    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   
@@ -43,8 +42,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Capstone" connectionString="Data Source=DESKTOP-CTIJ0GB\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True" />
-    <!--<add name="Capstone" connectionString="Data Source=DESKTOP-58F8CH1\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True;MultipleActiveResultSets=True" />-->
+    <!--add name="Capstone" connectionString="Data Source=DESKTOP-CTIJ0GB\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True" /> -->
+    <add name="Capstone" connectionString="Data Source=DESKTOP-58F8CH1\SQLEXPRESS;Initial Catalog=Capstone;Integrated Security=True" />
   </connectionStrings>
   <system.codedom>
     <compilers>
